@@ -146,87 +146,6 @@ unmask.source = function(text.mask) {
 }
 
 
-#' A weird operator for internal use only
-#'
-#' This operator is almost meaningless; it is used to mask the inline comments.
-#' @rdname InLiNe_IdEnTiFiEr
-#' @usage x %InLiNe_IdEnTiFiEr% y
-#' @param x the argument before the operator
-#' @param y the argument after the operator
-#' @return \code{x} (i.e. this operator always returns the object on the
-#'   left-hand-side)
-#' @author Yihui Xie <\url{http://yihui.name}>
-#' @seealso \code{\link{tidy.source}}
-#' @export "%InLiNe_IdEnTiFiEr%"
-#' @keywords internal
-#' @examples
-#' ## we can use it with *anything*
-#'
-#' 1 %InLiNe_IdEnTiFiEr% 2
-#'
-#' 1:10 %InLiNe_IdEnTiFiEr% "asdf"
-#'
-#' lm %InLiNe_IdEnTiFiEr% 'garbage'
-#'
-"%InLiNe_IdEnTiFiEr%" <- function(x, y) x
-
-
-#' Modified versions of parse() and deparse()
-#'
-#' These two functions parse and deparse the masked source code.
-#'
-#' For \code{\link{parse.tidy}}, the source code is masked to preserve comments,
-#' then this function uses \code{\link[base]{parse}} to return the parsed but
-#' unevaluated expressions in a list.
-#'
-#' For \code{\link{deparse.tidy}}, it uses \code{\link[base]{deparse}} to turn
-#' the unevaluated (and masked) expressions into character strings; the masks
-#' will be removed to restore the real source code. See
-#' \code{\link{unmask.source}}.
-#' @param text the source code as a character string to be passed to
-#'   \code{\link{tidy.source}}
-#' @param ... for \code{\link{parse.tidy}}: other arguments to be passed to
-#'   \code{\link{tidy.source}}; for \code{\link{deparse.tidy}}: arguments to be
-#'   passed to \code{\link[base]{deparse}}
-#' @return \code{\link{parse.tidy}} returns the unevaluated expressions;
-#'   \code{\link{deparse.tidy}} returns the character strings
-#' @author Yihui Xie <\url{http://yihui.name}>
-#' @note These functions are mainly designed for the package \pkg{pgfSweave};
-#'   they may not be useful to general users.
-#' @seealso \code{\link[base]{parse}}, \code{\link[base]{deparse}},
-#'   \code{\link{tidy.source}}
-#' @export
-#' @keywords internal
-#' @examples
-#' src = c("    # a single line of comments is preserved",
-#' '1+1', '  ', 'if(TRUE){',
-#' "x=1  # comments begin with at least 2 spaces!", '}else{',
-#' "x=2;print('Oh no... ask the right bracket to go away!')}",
-#' "1*3 # this comment will be dropped!",
-#' "2+2+2    # 'short comments'",
-#' "lm(y~x1+x2)  ### only 'single quotes' are allowed in comments",
-#' "1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1+1  ## comments after a long line")
-#'
-#' (expr = parse.tidy(src))
-#'
-#' parse.tidy(src, keep.blank.line = TRUE)
-#'
-#' cat(deparse.tidy(expr))
-#'
-#' deparse.tidy(expr, width.cutoff = 50)
-parse.tidy = function(text, ...) {
-  tidy.res = tidy.source(text = text, output = FALSE, ...)
-  base::parse(text = tidy.res$text.mask)
-}
-#' @param expr the unevaluated expressions (ideally as results from
-#' \code{\link{parse.tidy}})
-#' @rdname parse.tidy
-#' @export
-#' @keywords internal
-deparse.tidy = function(expr, ...) {
-  unmask.source(paste(base::deparse(expr, ...), collapse = '\n'))
-}
-
 #' Format the R scripts under a directory
 #'
 #' This function first looks for all the R scripts under a directory (using the
