@@ -4,6 +4,10 @@ MAJOR CHANGES
 
   o tidy.source(text = character(0)) returns character(0) instead of ''
 
+  o removed the (dark voodoo) functions parse.tidy() and deparse.tidy() as
+  well as the operator "%InLiNe_IdEnTiFiEr%"; they were designed for the
+  pgfSweave package, which has been archived on CRAN for a long time
+
 		   CHANGES IN formatR VERSION 0.7
 
 BUG FIXES
@@ -121,7 +125,7 @@ MAJOR CHANGES
 BUG FIXES
 
   o fixed #16: \\ in comments are preserved correctly now
-  
+
 
 		   CHANGES IN formatR VERSION 0.3-4
 
